--- a/public/custom/style/css_index.css
+++ b/public/custom/style/css_index.css
@@ -18,7 +18,7 @@ img{
 
 .barChart{
   height:40vh;
-  width:30%;
+  /*width:30%;*/
   /*margin:0.5%;*/
   display:inline-block;
   font-size: 1.5vw;
@@ -47,7 +47,8 @@ img{
     color:black;
 }
 
-img{
+/*img{
   width:100%;
   height:50%;
 }
+*/
